# thin_cstr

./: .gitignore  .travis.yml  Cargo.toml  README.md
src/: c_str.rs  lib.rs
